# remote-usb

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/remote-usb/: Cargo.toml
crates/remote-usb/src/: client.rs  control.rs  error.rs  filter.rs  kmod.rs  main.rs  privilege.rs  server.rs  usbip_cmd.rs
systemd/: remote-usb-client.service  remote-usb-server-attach.service.example
